Bug 521759 - [REGRESSION] SDR looks de-saturated while in HDR mode after 6.7.0 update
Summary: [REGRESSION] SDR looks de-saturated while in HDR mode after 6.7.0 update
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: colour-management (other bugs)
Version First Reported In: 6.7.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: regression
: 521813 522069 (view as bug list)
Depends on:
Blocks:
 
Reported: 2026-06-19 13:29 UTC by pvpdmail
Modified: 2026-06-29 13:05 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
drm_info output (131.83 KB, text/plain)
2026-06-19 13:29 UTC, pvpdmail
Details
kscreen-doctor -o output (5.85 KB, text/plain)
2026-06-19 13:30 UTC, pvpdmail
Details
updated kscreen-doctor -o (5.92 KB, text/plain)
2026-06-19 14:01 UTC, pvpdmail
Details
updated drm_info output (131.82 KB, text/plain)
2026-06-19 14:01 UTC, pvpdmail
Details
display EDID (384 bytes, application/octet-stream)
2026-06-19 15:53 UTC, pvpdmail
Details
wayland-info output (29.08 KB, text/plain)
2026-06-19 16:12 UTC, pvpdmail
Details

Note You need to log in before you can comment on or make changes to this bug.
Description pvpdmail 2026-06-19 13:29:49 UTC
Created attachment 193362 [details]
drm_info output

DESCRIPTION
SDR applications and content look very much de-saturated after the 6.7.0 plasma update. Also the sRGB saturation slider does nothing. HDR content works (I tried an HDR blu-ray with mpv).

STEPS TO REPRODUCE
1. Update to 6.7.0 

OBSERVED RESULT
Whole UI becomes de-saturated.

EXPECTED RESULT
Normal SDR saturation and sRGB saturation slider 

SOFTWARE/OS VERSIONS
Operating System: Arch Linux
KDE Plasma Version: 6.7.0
KDE Frameworks Version: 6.27.0
Qt Version: 6.11.1
Kernel Version: 7.0.12-zen1-1-zen (64-bit)
Graphics Platform: Wayland
Processors: 16 × AMD Ryzen 7 3700X 8-Core Processor
Memory: 16 GiB of RAM (15.5 GiB usable)
Graphics Processor: AMD Radeon RX 6700 XT
 

ADDITIONAL INFORMATION
A similar thing happened back in the transition from 6.3.5 to 6.4.0 #505857 with Kwin "not being able to parse the display primaries". I'll attach the output of `kscreen-doctor -o` and `drm_info` to maybe help.
Comment 1 pvpdmail 2026-06-19 13:30:31 UTC
Created attachment 193363 [details]
kscreen-doctor -o output
Comment 2 Zamundaaa 2026-06-19 13:47:34 UTC
> HDR color profile source: ICC
You have the color profile set to ICC, but no ICC profile set for HDR. The fallback is to assume sRGB.
Either set the color profile source to "built-in", or add an ICC profile suitable for HDR mode.
Comment 3 pvpdmail 2026-06-19 14:00:48 UTC
(In reply to Zamundaaa from comment #2)
> > HDR color profile source: ICC
> You have the color profile set to ICC, but no ICC profile set for HDR. The
> fallback is to assume sRGB.
> Either set the color profile source to "built-in", or add an ICC profile
> suitable for HDR mode.

I was about to add a comment about this. I've tried both the built-in profile and an ICC from the manufacturer (which is buggy at best) and I've gotten the exact same results.
I'll upload an updated version of the files
Comment 4 pvpdmail 2026-06-19 14:01:12 UTC
Created attachment 193366 [details]
updated kscreen-doctor -o
Comment 5 pvpdmail 2026-06-19 14:01:32 UTC
Created attachment 193367 [details]
updated drm_info output
Comment 6 Zamundaaa 2026-06-19 15:49:01 UTC
Please attach the EDID of the screen. You can get it with
> cat /sys/class/drm/card1/card1-DP-2/edid > edid.bin
Comment 7 pvpdmail 2026-06-19 15:53:23 UTC
Created attachment 193374 [details]
display EDID

>Please attach the EDID of the screen. You can get it with
>> cat /sys/class/drm/card1/card1-DP-2/edid > edid.bin

Here it is, hope it helps.
Comment 8 Zamundaaa 2026-06-19 16:03:36 UTC
That seems fine. What color information does wayland-info report for the screen?
Comment 9 pvpdmail 2026-06-19 16:12:39 UTC
Created attachment 193376 [details]
wayland-info output

>That seems fine. What color information does wayland-info report for the screen?

I can't really tell you by myself, but I can provide the output of the command.
Comment 10 Aidan Harris 2026-06-23 13:18:23 UTC
I bisected this to:
https://invent.kde.org/plasma/kwin/-/commit/e641ca6aaffc6aaefe0b93e5a2ccf28549c82393

git bisect log
git bisect start
# status: waiting for both good and bad commits
# bad: [536ad115ea32e66858c3924efee53b7924740bad] GIT_SILENT Sync po/docbooks with svn
git bisect bad 536ad115ea32e66858c3924efee53b7924740bad
# status: waiting for good commit(s), bad commit known
# bad: [1e74ce6d7f98613bfc6621186f4f9b9245c751bc] GIT_SILENT Sync po/docbooks with svn
git bisect bad 1e74ce6d7f98613bfc6621186f4f9b9245c751bc
# status: waiting for good commit(s), bad commit known
# bad: [8fa8df97005bcabab1b70d018f53682bb4e8ba4a] core/gpumanager: prefer more capable render nodes
git bisect bad 8fa8df97005bcabab1b70d018f53682bb4e8ba4a
# status: waiting for good commit(s), bad commit known
# good: [3b04b7177bc155f000883f7e42eb13c886544843] GIT_SILENT Sync po/docbooks with svn
git bisect good 3b04b7177bc155f000883f7e42eb13c886544843
# bad: [dbf93943e1a71718330522c1c6fd20afb0dbd6b8] plugins/mousemark: Port to Rect
git bisect bad dbf93943e1a71718330522c1c6fd20afb0dbd6b8
# bad: [2b9e64b0e40c6c2321c9a916a4ddb1c21f033b07] Manage text input v3 object client state in a per-client fashion.
git bisect bad 2b9e64b0e40c6c2321c9a916a4ddb1c21f033b07
# good: [1499746ade7ab2c72be01ca55b513b27f8e3ce60] effect/effecthandler: don't emit windowDeleted without an effectWindow
git bisect good 1499746ade7ab2c72be01ca55b513b27f8e3ce60
# bad: [1c1329945cc6a39e9ad4d2b775802bfe07e56904] A11yKeyboardMonitor: Don't crash when XKB state is null
git bisect bad 1c1329945cc6a39e9ad4d2b775802bfe07e56904
# good: [08d65fae1b8ef393b7bfb3b210a9d1e9ee7b550b] plugins/mousemark: Enable Apply button when editing shortcut
git bisect good 08d65fae1b8ef393b7bfb3b210a9d1e9ee7b550b
# bad: [7a76b3baff65257e46391de0df00ff5e2935a162] core/colorpipeline: also clamp if any color channel exceeds the maximum value
git bisect bad 7a76b3baff65257e46391de0df00ff5e2935a162
# good: [aab259b8358c532a37eae3deb396de44c55b6751] GIT_SILENT Sync po/docbooks with svn
git bisect good aab259b8358c532a37eae3deb396de44c55b6751
# bad: [e641ca6aaffc6aaefe0b93e5a2ccf28549c82393] backends/drm: rewrite the color pipeline matching algorithm to support 3D LUTs
git bisect bad e641ca6aaffc6aaefe0b93e5a2ccf28549c82393
# good: [2b6614f3bc6d9d4b4ab1b795a809c8d66c6b6581] GIT_SILENT Sync po/docbooks with svn
git bisect good 2b6614f3bc6d9d4b4ab1b795a809c8d66c6b6581
# first bad commit: [e641ca6aaffc6aaefe0b93e5a2ccf28549c82393] backends/drm: rewrite the color pipeline matching algorithm to support 3D LUTs
Comment 11 Bug Janitor Service 2026-06-23 15:48:55 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/9464
Comment 12 Zamundaaa 2026-06-23 15:49:33 UTC
(In reply to Aidan Harris from comment #10)
> I bisected this to:
> https://invent.kde.org/plasma/kwin/-/commit/
> e641ca6aaffc6aaefe0b93e5a2ccf28549c82393
That sounds like you're experiencing https://gitlab.freedesktop.org/drm/amd/-/work_items/5396 rather than this bug?
Comment 13 Zamundaaa 2026-06-23 15:57:25 UTC
*** Bug 521813 has been marked as a duplicate of this bug. ***
Comment 14 Zamundaaa 2026-06-23 16:29:58 UTC
*** Bug 522069 has been marked as a duplicate of this bug. ***
Comment 15 Aidan Harris 2026-06-24 14:04:40 UTC
(In reply to Zamundaaa from comment #12)
> (In reply to Aidan Harris from comment #10)
> > I bisected this to:
> > https://invent.kde.org/plasma/kwin/-/commit/
> > e641ca6aaffc6aaefe0b93e5a2ccf28549c82393
> That sounds like you're experiencing
> https://gitlab.freedesktop.org/drm/amd/-/work_items/5396 rather than this
> bug?

Thanks for pointing me in the right direction and sorry for the noise. The timing of 6.7 and this kernel issue is unfortunate.
Comment 16 Zamundaaa 2026-06-29 11:50:54 UTC
Git commit 6457b2a2e369e77674f6f7c6edf79c8d2e8905d3 by Xaver Hugl.
Committed on 29/06/2026 at 11:32.
Pushed by zamundaaa into branch 'master'.

backends/drm: use the native colorimetry again

In a refactor I effectively reverted fb085d39eacb78b2bfc61bcc9e2976091f692c75,
which was not intentional and breaks things for screens where the "default"
colorimetry signals sRGB primaries (which seems to usually be wrong).

M  +3    -3    src/backends/drm/drm_output.cpp

https://invent.kde.org/plasma/kwin/-/commit/6457b2a2e369e77674f6f7c6edf79c8d2e8905d3
Comment 17 Zamundaaa 2026-06-29 13:05:06 UTC
Git commit eb408a194835a112536c501d306cf5b6b6614c20 by Xaver Hugl.
Committed on 29/06/2026 at 12:01.
Pushed by zamundaaa into branch 'Plasma/6.7'.

backends/drm: use the native colorimetry again

In a refactor I effectively reverted fb085d39eacb78b2bfc61bcc9e2976091f692c75,
which was not intentional and breaks things for screens where the "default"
colorimetry signals sRGB primaries (which seems to usually be wrong).


(cherry picked from commit 6457b2a2e369e77674f6f7c6edf79c8d2e8905d3)

Co-authored-by: Xaver Hugl <xaver.hugl@kde.org>

M  +3    -3    src/backends/drm/drm_output.cpp

https://invent.kde.org/plasma/kwin/-/commit/eb408a194835a112536c501d306cf5b6b6614c20