backends/drm: use the native colorimetry again

In a refactor I effectively reverted fb085d39eacb78b2bfc61bcc9e2976091f692c75,
which was not intentional and breaks things for screens where the "default"
colorimetry signals sRGB primaries (which seems to usually be wrong).

BUG: 521759